// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Should render when user is authenticated. 1`] = `
<div id="app">
  <div id="nav">
    <!---->
    <router-link-stub to="lists">Listes |</router-link-stub>
    <router-link-stub to="/about">About|</router-link-stub>
    <router-link-stub to="/version">Version</router-link-stub>
    <logout-stub></logout-stub>
  </div>
  <router-view-stub></router-view-stub>
</div>
`;

exports[`App Should render. 1`] = `
<div id="app">
  <div id="nav">
    <router-link-stub to="/">Home|</router-link-stub>
    <!---->
    <router-link-stub to="/about">About|</router-link-stub>
    <router-link-stub to="/version">Version</router-link-stub>
    <!---->
  </div>
  <router-view-stub></router-view-stub>
</div>
`;
